# C-Compiler-Junk

./: CMakeLists.txt  README.md
include/: error.h  error.hpp  generator.h  parser.h  syntax_tree.h  token.h  tokenizer.h
include/ast/: binary_op_node.h  func_node.h  node.hpp  primary_node.h  scope.h  scope.hpp  state_node.h  top_node.h  translation_unit.h
src/: generator.cpp  main.cpp  parser.cpp  syntax_tree.cpp  token.cpp  tokenizer.cpp
src/ast/: binary_op_node.cpp  func_node.cpp  primary_node.cpp  scope.cpp  state_node.cpp  top_node.cpp  translation_unit.cpp
